--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: #FAFAFA;
-  margin: 54px 0 0;
   font-family: 'Roboto', sans-serif;
   color: #262626;
   font-weight: 400;
@@ -12,49 +11,46 @@ body {
 }
 
 .navbar {
-  width: 100%;
   display: flex;
-  justify-content: center;
-  height: 54px;
-  border-bottom: 1px solid #DBDBDB;
-  font-size: 22px;
-  background-color: #FFF;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
-  z-index: 2;
+  width: 100%;
+  height: 54px;
+  justify-content: center;
+  box-sizing: border-box;
+  border-bottom: 1px solid #DBDBDB;
+  background-color: #FFFFFF;
+  font-size: 22px;
+  z-index: 3;
 }
 
-.navbar ion-icon,
-.navbar img {
-  cursor: pointer;
-}
-
-.navbar .container {
+.navbar > div {
+  display: flex;
   width: 100%;
   max-width: 935px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   height: 100%;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #FFFFFF;
 }
 
-.navbar .container>* {
+.navbar .container > * {
   display: flex;
   align-items: center;
   height: 100%;
 }
 
 .navbar .logo img {
-  position: relative;
   top: 3px;
+  cursor: pointer;
 }
 
 .navbar .logo .separador {
   width: 1px;
   height: 22px;
-  background-color: #DBDBDB;
   margin: 0 10px;
+  background-color: #DBDBDB;
 }
 
 .navbar .pesquisa input {
@@ -69,9 +65,10 @@ body {
 
 .navbar .icones ion-icon {
   margin: 0 5px;
+  cursor: pointer;
 }
 
-.navbar .icones-mobile {
+.navbar .icones-mobile, .mobile {
   display: none;
 }
 
@@ -80,7 +77,7 @@ body {
   justify-content: space-between;
   width: 935px;
   margin: 0 auto;
-  margin-top: 88px;
+  margin-top: 18px;
 }
 
 .esquerda {
@@ -370,6 +367,13 @@ body {
   .post:first-child {
     margin-top: 0;
   }
+  .navbar {
+    display: none;
+  }
+
+  .mobile {
+    display: flex;
+  }
 
   .navbar .pesquisa {
     display: none;
@@ -413,9 +417,9 @@ body {
   }
 }
 
-ion-icon {
+/* ion-icon {
   visibility: visible;
-}
+} */
 
 .usuario ion-icon {
   margin-left: 5px;
